# GDV22011

./: main.tex
p2/: CMakeLists.txt  PNShader.frag  PNShader.vert  PNShaderCast.vert  PNShaderVlacho.vert  PNTriangles.cpp  PNTriangles.h  TriangleMesh.cpp  TriangleMesh.h  config.h  config.h.in  main.cpp  main.h
p2/models/: bunny.off  flat.off  flathalf.off  flathalfD.off  seashell.off  triangTorus.off
tesselationdemo/: CMakeLists.txt  Geodesic.c  Geodesic.cpp  Geodesic.glsl
tesselationdemo/lib/libpez/: pez.h  pez.linux.c
theory1/: .gitignore  main.dvi  main.ps  main.tex  plot.tex  plot1.tex  task1.tex  task2.tex  task3.tex
theory2/: main.aux  main.dvi  main.ps  main.tex  plot2.tex  plot3a.tex  plot3b.tex  task1.tex  task2.tex  task3.tex
theory3/: main.dvi  main.ps  main.tex  plot3.tex  task1.tex  task2.tex  task3.tex
theory4/: main.tex  task1.tex  task2.tex  task3.tex  task4.tex
theory4/src/: comp_matrix.m  f.m  func.m  funct.m  iminus.m  imult.m  interval.m  lambda.m  xi.m
